fix inner container to allow translations to be word-wrapped and not stretch past the window.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,8 @@ body {
 
 #inner_container {
     background-color: #4a1c40;
-    padding: 100px 225px;
+    width: 50%;
+    padding: 75px 0;
     border-radius: 33% 5%;
     display: flex;
 }
